add new route to fetch community members
